# spextractor

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  setup.py
.github/workflows/: run_pytest.yml
example/: blue_edge_example.py  downsampling_example.py  example.py  example2.py  fast_fit_example.py  fitting_example.py  full_example.py  mangling_example.py  manual_feature_example.py
spextractor/: __init__.py  downsample.py  lines.py  manual.py  spextractor.py
spextractor/math/: GaussianProcessModel.py  InterpolationModel.py  SKIModel.py  SplineModel.py  functions.py  gpr.py  interpolate.py
spextractor/physics/: deredden.py  doppler.py  downsample.py  feature.py  lines.py  telluric.py
spextractor/util/: interpolate.py  io.py  log.py  manual.py  preprocessing.py
tests/: conftest.py  test_feature.py  test_model_comparison.py  test_models.py  test_plots.py  test_spextractor.py
